--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
         "target": "es5",
-        "module": "commonjs",
+        "module": "ES2020",
         "sourceMap": true,
         "outDir": "./build",
         "rootDir": "./src",
