--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
   "dependencies": {
     "dotenv": "16.0.0",
     "express": "4.17.2",
-    "lowdb": "3.0.0"
+    "lowdb": "3.0.0",
+    "perron": "0.11.4"
   }
 }
