--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
   "dependencies": {
     "dotenv": "16.0.0",
     "express": "4.17.2",
+    "express-graphql": "0.12.0",
+    "graphql": "16.3.0",
     "lowdb": "3.0.0",
     "perron": "0.11.4"
   }
