--- a/package.json
+++ b/package.json
@@ -52,9 +52,9 @@
     "typescript": "4.5.5"
   },
   "dependencies": {
+    "apollo-server-express": "3.6.2",
     "dotenv": "16.0.0",
     "express": "4.17.2",
-    "express-graphql": "0.12.0",
     "graphql": "16.3.0",
     "lowdb": "3.0.0",
     "perron": "0.11.4"
