--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lint:fix": "npm run lint -- --fix",
     "format": "prettier --write '**/*.ts'",
     "build": "tsc",
+    "generate-schema": "graphql-codegen",
     "test": "jest"
   },
   "repository": {
@@ -33,6 +34,9 @@
     }
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "2.5.0",
+    "@graphql-codegen/typescript": "2.4.3",
+    "@graphql-codegen/typescript-resolvers": "2.5.0",
     "@types/express": "4.17.13",
     "@types/jest": "27.4.0",
     "@typescript-eslint/eslint-plugin": "5.10.0",
